--- a/templates/index.html
+++ b/templates/index.html
@@ -1,33 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>BioSeq Analyzer - Upload FASTA</title>
-</head>
-<body>
-    <h1>BioSeq Analyzer</h1>
-    <h2>Upload a FASTA File</h2>
-    {% with messages = get_flashed_messages() %}
-      {% if messages %}
-        <ul>
-        {% for message in messages %}
-          <li>{{ message }}</li>
-        {% endfor %}
-        </ul>
-      {% endif %}
-    {% endwith %}
-    <form method="post" enctype="multipart/form-data">
-        <input type="file" name="file" accept=".fasta,.fa,.fna" required>
-        <button type="submit">Add File</button>
-    </form>
-    {% if files and files|length > 0 %}
-    <h3>Uploaded Files</h3>
-    <ul>
-      {% for filename, names in files %}
-        <li><b>{{ filename }}</b>: {{ names|join(', ') }}</li>
-      {% endfor %}
-    </ul>
-    <a href="/summary">Go to Summary &rarr;</a>
-    {% endif %}
-</body>
-</html> 
+from flask import render_template_string
+
+@app.route('/')
+def index():
+    return render_template_string(base_html_py, content=index_html_py)
+
+@app.route('/summary')
+def summary():
+    stats=fasta_manager.get_stats()
+    gc_contents=fasta_manager.get_gc_contents()
+    names=fasta_manager.get_names()
+    return render_template_string(base_html_py, content=summary_html_py,
+                                  stats=stats, gc_contents=gc_contents, names=names)
