--- a/templates/motif.html
+++ b/templates/motif.html
@@ -7,6 +7,22 @@
   </div>
   <button class="btn btn-primary" type="submit">Search Motif</button>
 </form>
+
+<h2 class="mt-4">Discover Conserved Motifs</h2>
+<form method="POST">
+  <div class="row">
+    <div class="col-md-6">
+      <label for="k">K-mer length</label>
+      <input class="form-control" type="number" name="k" value="5">
+    </div>
+    <div class="col-md-6">
+      <label for="threshold">Occurrence Threshold</label>
+      <input class="form-control" type="number" name="threshold" value="2">
+    </div>
+  </div>
+  <button class="btn btn-secondary mt-2" type="submit">Discover Motifs</button>
+</form>
+
 {% if results %}
   <div class="row mt-4">
     <div class="col-md-12">
@@ -14,7 +30,7 @@
         <img src="/motif_histogram.png" alt="Motif Distribution Histogram" class="img-fluid">
     </div>
   </div>
-  <h3 class="mt-4">Results</h3>
+  <h3 class="mt-4">Search Results</h3>
   <ul class="list-group">
     {% for r in results %}
       <li class="list-group-item">
@@ -24,4 +40,14 @@
     {% endfor %}
   </ul>
 {% endif %}
+
+{% if discovered %}
+<h3 class="mt-4">Discovered Motifs</h3>
+<ul class="list-group">
+  {% for motif, count in discovered.items() %}
+    <li class="list-group-item">{{ motif }}: {{ count }}</li>
+  {% endfor %}
+</ul>
+{% endif %}
+
 {% endblock %}
