--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
           <li class="nav-item"><a class="nav-link" href="/summary">Summary</a></li>
           <li class="nav-item"><a class="nav-link" href="/motif">Motif Search</a></li>
           <li class="nav-item"><a class="nav-link" href="/align">Alignment</a></li>
+          <li class="nav-item"><a class="nav-link" href="/compare_reference">Compare to Reference</a></li>
         </ul>
       </div>
     </div>
