--- a/templates/motif.html
+++ b/templates/motif.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
-<h2>Motif Search</h2>
+<h2 class="mb-4">Motif Search</h2>
+
 <form method="POST">
   <div class="mb-3">
     <label>Motif (optional):</label>
@@ -18,6 +19,9 @@
 </form>
 
 {% if results %}
+  <h3 class="mt-4">Motif Distribution Plot</h3>
+  <img src="{{ url_for('motif_histogram_png') }}" alt="Motif Distribution Plot" class="img-fluid">
+
   <h3 class="mt-4">Motif Matches</h3>
   <ul class="list-group mb-4">
     {% for result in results %}
